ajouts tetriminos + correctif docs

--- a/doxygen docs/latex/struct_t_e_t_r_i_m_i_n_o.tex
+++ b/doxygen docs/latex/struct_t_e_t_r_i_m_i_n_o.tex
@@ -1,20 +1,20 @@
-\hypertarget{struct_t_e_t_r_i_m_i_n_o}{}\doxysection{TETRIMINO Struct Reference}
-\label{struct_t_e_t_r_i_m_i_n_o}\index{TETRIMINO@{TETRIMINO}}
+\doxysection{TETRIMINO Struct Reference}
+\hypertarget{struct_t_e_t_r_i_m_i_n_o}{}\label{struct_t_e_t_r_i_m_i_n_o}\index{TETRIMINO@{TETRIMINO}}
 
 
 Structure to locate the current tetrimino in the game.  
 
 
-\doxysubsection*{Public Attributes}
+\doxysubsubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{struct_t_e_t_r_i_m_i_n_o_a2b80bce73357fc0a28330a42f52c1e1f}\label{struct_t_e_t_r_i_m_i_n_o_a2b80bce73357fc0a28330a42f52c1e1f}} 
+\Hypertarget{struct_t_e_t_r_i_m_i_n_o_a2b80bce73357fc0a28330a42f52c1e1f}\label{struct_t_e_t_r_i_m_i_n_o_a2b80bce73357fc0a28330a42f52c1e1f} 
 int {\bfseries coordY}
 \item 
-\mbox{\Hypertarget{struct_t_e_t_r_i_m_i_n_o_ae28eaea295460a054ce6fcd2ab96d526}\label{struct_t_e_t_r_i_m_i_n_o_ae28eaea295460a054ce6fcd2ab96d526}} 
+\Hypertarget{struct_t_e_t_r_i_m_i_n_o_ae28eaea295460a054ce6fcd2ab96d526}\label{struct_t_e_t_r_i_m_i_n_o_ae28eaea295460a054ce6fcd2ab96d526} 
 int {\bfseries coordX}
 \item 
-\mbox{\Hypertarget{struct_t_e_t_r_i_m_i_n_o_a59a24d310bf26770f49a7a4c94683af5}\label{struct_t_e_t_r_i_m_i_n_o_a59a24d310bf26770f49a7a4c94683af5}} 
+\Hypertarget{struct_t_e_t_r_i_m_i_n_o_a59a24d310bf26770f49a7a4c94683af5}\label{struct_t_e_t_r_i_m_i_n_o_a59a24d310bf26770f49a7a4c94683af5} 
 int {\bfseries piece} \mbox{[}4\mbox{]}\mbox{[}4\mbox{]}
 \end{DoxyCompactItemize}
 
@@ -24,4 +24,4 @@ Structure to locate the current tetrimino in the game.
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/kerfriden.\+APOLLO2/\+Documents/\+Tetris-\/\+STM/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Game.\+c\end{DoxyCompactItemize}
+C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8c}{tetris\+Game.\+c}}\end{DoxyCompactItemize}
