--- a/doxygen docs/latex/tetris_leveling_8c.tex
+++ b/doxygen docs/latex/tetris_leveling_8c.tex
@@ -1,23 +1,23 @@
-\hypertarget{tetris_leveling_8c}{}\doxysection{C\+:/\+Users/kerfriden.APOLLO2/\+Documents/\+Tetris-\/\+STM/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Leveling.c File Reference}
-\label{tetris_leveling_8c}\index{C:/Users/kerfriden.APOLLO2/Documents/Tetris-\/STM/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c@{C:/Users/kerfriden.APOLLO2/Documents/Tetris-\/STM/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c}}
+\doxysection{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Leveling.c File Reference}
+\hypertarget{tetris_leveling_8c}{}\label{tetris_leveling_8c}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c}}
 
 
 \+: Program for Tetris Leveling system  
 
 
-{\ttfamily \#include \char`\"{}tetris\+Leveling.\+h\char`\"{}}\newline
-{\ttfamily \#include \char`\"{}tetris\+Game.\+h\char`\"{}}\newline
-\doxysubsection*{Functions}
+{\ttfamily \#include "{}tetris\+Leveling.\+h"{}}\newline
+{\ttfamily \#include "{}tetris\+Game.\+h"{}}\newline
+\doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
 uint8\+\_\+t \mbox{\hyperlink{tetris_leveling_8c_acd58cbe3d18d5faa6ccd3a084881c296}{get\+Level\+Number}} ()
 \begin{DoxyCompactList}\small\item\em Return level\+Number. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{tetris_leveling_8c_ae72ba64668f34137e4fe3886600662fe}{new\+Level\+Calculate}} (uint8\+\_\+t \+\_\+number\+Of\+Line\+Completed)
 \begin{DoxyCompactList}\small\item\em Verify and change level\+Number. \end{DoxyCompactList}\end{DoxyCompactItemize}
-\doxysubsection*{Variables}
+\doxysubsubsection*{Variables}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{tetris_leveling_8c_aed8ac595ddce3f58d43e7f162d123de4}\label{tetris_leveling_8c_aed8ac595ddce3f58d43e7f162d123de4}} 
+\Hypertarget{tetris_leveling_8c_aed8ac595ddce3f58d43e7f162d123de4}\label{tetris_leveling_8c_aed8ac595ddce3f58d43e7f162d123de4} 
 uint8\+\_\+t {\bfseries level\+Number} = 0
 \end{DoxyCompactItemize}
 
@@ -31,7 +31,7 @@ uint8\+\_\+t {\bfseries level\+Number} = 0
 
 
 \doxysubsection{Function Documentation}
-\mbox{\Hypertarget{tetris_leveling_8c_acd58cbe3d18d5faa6ccd3a084881c296}\label{tetris_leveling_8c_acd58cbe3d18d5faa6ccd3a084881c296}} 
+\Hypertarget{tetris_leveling_8c_acd58cbe3d18d5faa6ccd3a084881c296}\label{tetris_leveling_8c_acd58cbe3d18d5faa6ccd3a084881c296} 
 \index{tetrisLeveling.c@{tetrisLeveling.c}!getLevelNumber@{getLevelNumber}}
 \index{getLevelNumber@{getLevelNumber}!tetrisLeveling.c@{tetrisLeveling.c}}
 \doxysubsubsection{\texorpdfstring{getLevelNumber()}{getLevelNumber()}}
@@ -46,7 +46,7 @@ Return level\+Number.
 {\em level\+Number} & \\
 \hline
 \end{DoxyRetVals}
-\mbox{\Hypertarget{tetris_leveling_8c_ae72ba64668f34137e4fe3886600662fe}\label{tetris_leveling_8c_ae72ba64668f34137e4fe3886600662fe}} 
+\Hypertarget{tetris_leveling_8c_ae72ba64668f34137e4fe3886600662fe}\label{tetris_leveling_8c_ae72ba64668f34137e4fe3886600662fe} 
 \index{tetrisLeveling.c@{tetrisLeveling.c}!newLevelCalculate@{newLevelCalculate}}
 \index{newLevelCalculate@{newLevelCalculate}!tetrisLeveling.c@{tetrisLeveling.c}}
 \doxysubsubsection{\texorpdfstring{newLevelCalculate()}{newLevelCalculate()}}
