--- a/doxygen docs/latex/user_oled_8h_source.tex
+++ b/doxygen docs/latex/user_oled_8h_source.tex
@@ -17,7 +17,7 @@
 \DoxyCodeLine{00013\ }
 \DoxyCodeLine{00014\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_a5ddae6e19852caa13e77f7aa2b50e3b3}{drawBorder}}();}
 \DoxyCodeLine{00015\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_a3a25a8ee25260d16cc10fc35c2ea38fe}{drawTile}}(uint8\_t\ x,\ uint8\_t\ y,\ SSD1306\_COLOR\ color);}
-\DoxyCodeLine{00016\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_a6f41720fd4da3fcfab5ac1259c7823c7}{drawStack}}(\textcolor{keywordtype}{int}\ stack[23][16]);}
+\DoxyCodeLine{00016\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_a2f9d9e566e5746dca38a99ac8b8c2b81}{drawPlayZone}}(\textcolor{keywordtype}{int}\ stack[23][16]);}
 \DoxyCodeLine{00017\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_aeb2c7e9c7d14c9eccb7e624bd9611ef8}{drawGameOver}}();}
 \DoxyCodeLine{00018\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_a4a8b7e31c3fe86ea9f12dd3ba0745eb3}{ssd1306\_SetCursorVertical}}(uint8\_t\ x,\ uint8\_t\ y);}
 \DoxyCodeLine{00019\ \textcolor{keywordtype}{char}\ \mbox{\hyperlink{user_oled_8c_a86b173139967c187e228c0a2c56215ce}{ssd1306\_WriteStringVertical}}(\textcolor{keywordtype}{char}*\ str,\ FontDef\ Font,\ SSD1306\_COLOR\ color);}
@@ -25,8 +25,8 @@
 \DoxyCodeLine{00021\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_aaf80dc343615929a9d7ca23689b573e0}{clearPlayZone}}();}
 \DoxyCodeLine{00022\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_a1b46f95cb32d9af8eca89bad57d18210}{tetrisBordureDecor}}(SSD1306\_COLOR\ color);}
 \DoxyCodeLine{00023\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_ae0744272d835bb6e1f8ef839bfd92a06}{drawTetriminos}}();}
-\DoxyCodeLine{00024\ \textcolor{keywordtype}{void}\ Clignotement\_Ecran();}
-\DoxyCodeLine{00025\ \textcolor{keywordtype}{void}\ Clignotement\_Click();}
+\DoxyCodeLine{00024\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_a9ecefd15a6fad87becac106fde8ca70f}{Clignotement\_Ecran}}();}
+\DoxyCodeLine{00025\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_aec8e34e8d938666651abcd63389fb345}{Clignotement\_Click}}();}
 \DoxyCodeLine{00026\ }
 \DoxyCodeLine{00027\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ USEROLED\_H\_\ */}\textcolor{preprocessor}{}}
 
