--- a/doxygen docs/latex/index.tex
+++ b/doxygen docs/latex/index.tex
@@ -1,4 +1,6 @@
-\hypertarget{index_Introduction}{}\doxysection{Introduction}\label{index_Introduction}
+\chapter{Tetris Game}
+\hypertarget{index}{}\label{index}\index{Tetris Game@{Tetris Game}}
+\hypertarget{index_Introduction}{}\doxysection{\texorpdfstring{Introduction}{Introduction}}\label{index_Introduction}
 Ce jeu de Tetris a entièrement été réalisé par Adrien Kerfriden, Lou Vacher et Pierre Pontet.
 
 Il a été conçu pour fonctionner sur une carte STM32 L031\+K6.
