--- a/doxygen docs/latex/tetris_game_8h_source.tex
+++ b/doxygen docs/latex/tetris_game_8h_source.tex
@@ -12,7 +12,7 @@
 \DoxyCodeLine{00008\ \textcolor{preprocessor}{\#ifndef\ TETRISGAME\_H\_}}
 \DoxyCodeLine{00009\ \textcolor{preprocessor}{\#define\ TETRISGAME\_H\_}}
 \DoxyCodeLine{00010\ }
-\DoxyCodeLine{00011\ \textcolor{keywordtype}{int}\ tetrisGame();}
+\DoxyCodeLine{00011\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{tetris_game_8c_aaf103d842e6d9f5524319094721d4268}{tetrisGame}}();}
 \DoxyCodeLine{00012\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{tetris_game_8c_a2c55dad3d3336ee657f1bf1a4c896978}{reduceFallDelay}}();}
 \DoxyCodeLine{00013\ }
 \DoxyCodeLine{00014\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ TETRISGAME\_H\_\ */}\textcolor{preprocessor}{}}
